# seap

./: .gitignore  LICENSE  README.md  URL.ts  als.ts  arm.txt  crt.ts  debug_system_error.py  funny.c  hello.html  hello_test.sh  index.html  install.rust.sh  install.sh  note.md  notes.md  package_app.sh  package_app_test.sh  package_dll.sh  package_fawn.sh  port_list.txt  project.md  random_eninge.js  rdk_build.sh  readme.md  real.html  seap_build.sh  sig.sh  spoof.sh  str  t.ts  vmaare.sh  wasm_test_build.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
SPEED_S/: Cargo.toml
alg_core/: Cargo.toml
app/: Cargo.toml
binhide/: Cargo.toml
bolt/: readme
c33/: shity titain m2.md
fast_gradingchart/: Cargo.toml  b.md  b.sh
fast_seatingchart/: Cargo.toml  b.md  bench.md
fawn/: createshell.sh  debug_system_error.py  installbtop.sh  package_app.sh  package_app_test.sh
fawn-app/: Cargo.toml  gen_asm.sh
fawn-cpp/: main.cpp
fawn-dll/: build.sh
fawn-lib/: Cargo.toml
fawn-lib/src/: api.rs  dectect.rs  error.rs  helper.rs  lib.rs  types.rs
fawn-lib/src/api/: helper.rs
fawn-lib/src/custom/nt/: peb.rs
fawn-lib/src/ms/: win32.rs
fawn-rust/: Cargo.toml  run.sh
fawn/fawn-dll/: Cargo.toml
hello/: Cargo.toml  wasm.wasm
intel8080rs/: Cargo.toml
java/: ChoiceQuestion.java  QuestionDemo1.java  build.sh  main.java  note.txt
juke_runner/: Cargo.toml
mango/: Cargo.toml
mango_lib/: Cargo.toml
projects/fast_seatingchart/: Cargo.toml  bench.md  bench.txt  output.txt  run.sh
projects/fast_seatingchart/src/: main.rs  seating_chart.txt
(+247 files in other folders)
