[package]
name = "fast_seatingchart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.4"
rayon = "1.9.0"


[profile.release]
lto = true
opt-level = 3
overflow-checks = true
strip = "debuginfo"

[build]
rustflags = ["-Z", "tune-cpu=native"]
target-cpu = "native"